--- a/src/css/denglu.css
+++ b/src/css/denglu.css
@@ -133,22 +133,6 @@ body a {
   bottom: -20px;
 }
 
-.box-form .form-body .form-item select {
-  padding-left: 20px;
-  color: #00081c;
-  letter-spacing: .1rem;
-  background-color: #fff;
-  border: 0;
-  outline: 1px solid #ddd;
-  appearance: none;
-  background-size: 11px 6px;
-  width: 100%;
-  height: 50px;
-  font-size: 13px;
-  line-height: 13px;
-  position: relative;
-}
-
 .box-form .form-body .form-item .val-vcode.disabled {
   background-color: #f4f4f4;
 }
@@ -171,31 +155,6 @@ body a {
   line-height: 50px;
 }
 
-.box-form .form-body .form-item .correct-icon {
-  display: none;
-  text-align: center;
-  float: left;
-  border: 1px solid #007947;
-  cursor: pointer;
-  background-color: #007947;
-  color: #fff;
-  width: 125px;
-  height: 50px;
-  font-size: 13px;
-  line-height: 50px;
-}
-
-.box-form .form-body .form-item .error-tip {
-  display: none;
-  line-height: 13px;
-  color: #d80000 !important;
-  position: absolute;
-  left: 0;
-  right: auto;
-  top: auto;
-  bottom: -20px;
-}
-
 .box-form .form-body .agreement {
   color: #00081c;
   position: relative;
@@ -204,44 +163,8 @@ body a {
   height: 60px;
 }
 
-.box-form .form-body .agreement input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  z-index: 2;
-  width: 16px;
-  height: 16px;
-}
-
-.box-form .form-body .agreement span {
-  position: absolute;
-  top: 1px;
-  border: 1px solid #d6d6d6;
-  border-radius: 3px;
-  width: 16px;
-  height: 16px;
-}
-
-.box-form .form-body .agreement .lbl-agreement {
-  font-size: 14px;
-  margin-left: 25px;
-  cursor: pointer;
-  color: #00081c;
-}
-
-.box-form .form-body .agreement .lbl-agreement em {
-  font-style: normal;
-  text-decoration: underline;
-}
-
-.box-form .form-body .agreement .error-tip {
-  padding-top: 10px;
-  color: #dd6a61;
-  padding-left: 25px;
-  display: none;
-}
-
 .box-form .form-body .btn-submit {
+  margin-top: 30px;
   float: left;
   background-color: #00081c;
   border: 1px solid #cdbc7a;
